--- a/PagedPhotoView/Storyboard.storyboard
+++ b/PagedPhotoView/Storyboard.storyboard
@@ -62,7 +62,7 @@
                     <view key="view" contentMode="scaleToFill" id="gja-Hs-bL7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="Tdf-UE-myd"/>
                 </viewController>
